@@ -5,13 +5,17 @@ use warnings;
 
 use Test::More;
 
-use Const::Fast;
 use English qw( -no_match_vars );
-use File::Slurp;
+
+my $DICTIONARY = 'xt/etc/custom-dictionary.txt';
 
 unless ( $ENV{RELEASE_TESTING} ) {
     plan( skip_all => "Author tests not required for installation" );
 }
+
+
+eval "use File::Slurp";
+plan skip_all => 'File::Slurp required' if $@;
 
 eval "use Text::Aspell";
 plan skip_all => 'Text::Aspell required' if $@;
@@ -25,13 +29,11 @@ plan skip_all => 'Lingua::Ispell required' if $@;
 eval "require Test::Pod::Spelling";
 plan skip_all => 'Test::Pod::Spelling required' if $@;
 
-const my $dictionary => 'xt/etc/custom-dictionary.txt';
-
 Test::Pod::Spelling->import(
     spelling => {
-	allow_words => [
-	    (map { chomp($ARG); $ARG } read_file($dictionary))
-	],
+        allow_words => [
+            (map { chomp($ARG); $ARG } read_file($DICTIONARY))
+        ],
     },
 );
 
