@@ -2,6 +2,8 @@ Revision history for Hash::Match
 
         - Switch to use List::AllUtils
 
+        - Removed use of Const::Fast from xt/pod-spelling.t.
+
 v0.5.3  2014-08-16
 
         - Added SEE ALSO section to the POD.
